changing to jsx file

--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ p{
   font-size:1.5em;
 }
 td {
-  color: white;
-  font-family: Arial;
-  text-align: center;
+  letter-Spacing:3;
+  color: "white";
+  background:"black"
 }
