--- a/src/FlipCounter.css
+++ b/src/FlipCounter.css
@@ -1,10 +1,11 @@
 p{
     color:rgb(189, 27, 27);
-    font-size:1.5em;
-  }
-  td {
-    letter-Spacing:3;
-    color: "white";
-    background:"black"
+    font-size:1em;
+}
+
+td{
+    letter-Spacing:1;
+    color:rgb(245, 241, 241);
+    background:rgb(66, 66, 66);;
   }
   
