changing to a specific style

--- a/src/FlipCounter.css
+++ b/src/FlipCounter.css
@@ -1,9 +1,5 @@
-p {
-  color: rgb(189, 27, 27);
-  font-size: 1em;
-}
 
-td {
+ #main{
   letter-spacing: 1;
   color: rgb(245, 241, 241);
   background: rgb(66, 66, 66);
